--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,12 @@
-.new-tweet {
-  border: solid rgba(122, 122, 122, 0.26) 1px;
-  width: 100%;
-  padding: 10px 15px;
+#new-tweet {
+  /* border: solid rgba(122, 122, 122, 0.26) 1px; */
+  width: 90%;
+  margin: auto;
+  padding: 0.5em;
 }
 
-.tweet {
-  width: 90%;
+.compose {
+  width: 100%;
   margin: auto;
   display: flex;
   justify-content: center;
