--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,6 +1,6 @@
 article.tweet {
   width: 90%;
-  margin: auto;
+  margin: 1em auto;
   padding: 0.5em;
   border: solid #2e3f77 3px;
   display: flex;
