--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,4 +28,19 @@ body {
  .container {
   width: 100%;
   margin: auto;
+  padding: 0;
+}
+
+@media only screen and (min-width: 1024px) {
+  main.container {
+      width: 70%;
+    }
+
+    body {
+      max-width: 1450px;
+      margin: auto;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
