--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,3 +14,20 @@ nav span {
   font-family: "Bungee", "sans-serif";
 }
 
+
+
+div.nav-compose {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+}
+
+div.nav-compose:hover {
+  cursor: pointer;
+}
+
+div.nav-compose i {
+  text-align: center;
+  color: rgb(207, 43, 43);
+}
