--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -18,6 +18,7 @@
 
 @media only screen and (min-width: 1024px) {
   div.profile-header {
-    width: 30%;
+    width: 26%;
+    margin: 3em 2%;
   }
 } 
