--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,16 +31,22 @@ body {
   padding: 0;
 }
 
+@media only screen and (max-width: 500px) {
+  body {
+    min-width: 400px;
+  }
+}
 @media only screen and (min-width: 1024px) {
   main.container {
       width: 70%;
+      margin-top: 3em;
     }
 
-    body {
-      max-width: 1450px;
-      margin: auto;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
+  body {
+    max-width: 1450px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
+}
